--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,9 @@
 .app-container {
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
 
   display: grid;
   grid: 1fr / 1fr 1fr;
