--- a/src/OutputSection.css
+++ b/src/OutputSection.css
@@ -1,4 +1,5 @@
 #outputSection {
+    box-sizing: border-box;
     display: flex;
     flex-direction: column;
     width: 100%;
@@ -7,6 +8,7 @@
 
 .upper-left {
     width: 100%;
+    box-sizing: border-box;
     padding: 20px;
     display: flex;
     flex-direction: column;
